--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="page-nav">
         <a class="logo link" href="./index.html" lang="en">Web<span class="logo-header">Studio</span></a>
         <ul class="menu list">
-          <li class="menu-item"><a class="menu-link link" href="">Студія</a></li>
+          <li class="menu-item"><a class="menu-link current underline link" href="">Студія</a></li>
           <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Портфоліо</a>
           </li>
@@ -121,29 +121,32 @@
         <div class="container">
         <h2 class="section-heading">Чим ми займаємося</h2>
         <ul class="list img-box-container">
-          <li>
+          <li class="img-item">
             <img
               src="./images/what-do/keyboard.jpg"
               alt="клавіатура"
               width="370"
               height="294"
-            />
+            />     
+            <div class="img-box-title"><p class="img-title">Десктопні додатки</p></div>
           </li>
-          <li>
+          <li class="img-item">
             <img
               src="./images/what-do/laptop.jpg"
               alt="ноутбук"
               width="370"
               height="294"
             />
+            <div class="img-box-title"><p class="img-title">Мобільні додатки</p></div>
           </li>
-          <li>
+          <li class="img-item">
             <img
               src="./images/what-do/tablet.jpg"
               alt="планшет"
               width="370"
               height="294"
             />
+            <div class="img-box-title"><p class="img-title">Дизайнерські рішення</p></div>
           </li>
         </ul>
       </div>
