--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         <ul class="menu list">
           <li class="menu-item"><a class="menu-link link" href="">Студія</a></li>
           <li class="menu-item">
-            <a class="menu-link link" href="./portfolio.html">Портфоліо</a>
+            <a class="menu-link current underline link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="">Контакти</a>
