--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               width="370"
               height="294"
             />     
-            <div class="img-box-title"><p class="img-title">Десктопні додатки</p></div>
+            <p class="img-title">Десктопні додатки</p>
           </li>
           <li class="img-item">
             <img
@@ -137,7 +137,7 @@
               width="370"
               height="294"
             />
-            <div class="img-box-title"><p class="img-title">Мобільні додатки</p></div>
+            <p class="img-title">Мобільні додатки</p>
           </li>
           <li class="img-item">
             <img
@@ -146,7 +146,7 @@
               width="370"
               height="294"
             />
-            <div class="img-box-title"><p class="img-title">Дизайнерські рішення</p></div>
+            <p class="img-title">Дизайнерські рішення</p>
           </li>
         </ul>
       </div>
