--- a/portfolio.html
+++ b/portfolio.html
@@ -75,32 +75,41 @@
         <ul class="list portfolio-cards">
             <li class="cards-item">
               <a href="" class="cards-link link">
+                <div class="portfolio-box-overlay">
                 <img src="./images/portfolio/technocrack.jpg" 
                 alt="Технокряк" 
                 width="370" 
                 height="294">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>  
+                </div>
                 <div class="portfolio-box">
-                  <h2 class="portfolio-title">Технокряк</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-text">Веб-сайт</p>
                 </div> 
               </a>                 
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/poster.jpg" alt="Постер" 
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/poster.jpg" alt="Постер" 
                 width="370"
                 height="294">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>        
                 <div class="portfolio-box">
-                  <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
-                  <p class="portfolio-text">Дизайн</p>
+                <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
+                <p class="portfolio-text">Дизайн</p>
                 </div>   
               </a>               
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/seafood.jpg" alt="Ресторан"
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/seafood.jpg" alt="Ресторан"
                 width="370"
                 height="294">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>                
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -109,9 +118,12 @@
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/prime.jpg" alt="навушники" 
-                width="370"
-                height="294">
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/prime.jpg" alt="навушники" 
+                  width="370"
+                  height="294">
+                  <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>               
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -120,9 +132,12 @@
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/boxes.jpg" alt="коробки"
-                width="370"
-                height="294">
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/boxes.jpg" alt="коробки"
+                  width="370"
+                  height="294">
+                  <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>                
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -131,9 +146,12 @@
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/inspiration.jpg" alt="монітор"
-                width="370"
-                height="294">
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/inspiration.jpg" alt="монітор"
+                  width="370"
+                  height="294">
+                  <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>                
                 <div class="portfolio-box">
                   <h2 class="portfolio-title"  lang="en">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -142,9 +160,12 @@
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/limited.jpg" alt="книга"
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/limited.jpg" alt="книга"
                 width="370"
                 height="294">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>                
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -153,9 +174,12 @@
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/lab.jpg" alt="бірка" 
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/lab.jpg" alt="бірка" 
                 width="370"
                 height="294">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>                
                 <div class="portfolio-box">
                   <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -164,9 +188,12 @@
             </li>
             <li class="cards-item">
               <a  href="" class="cards-link link">
-                <img src="./images/portfolio/growing.jpg" alt="ноутбук" 
+                <div class="portfolio-box-overlay">
+                  <img src="./images/portfolio/growing.jpg" alt="ноутбук" 
                 width="370"
                 height="294">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>                
                 <div class="portfolio-box">
                   <h2 class="portfolio-title"  lang="en">Growing Business</h2>
                   <p class="portfolio-text">Додаток</p>
