add modal window

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1 class="hero-title">
           Ефективні рішення для вашого бізнесу
         </h1>
-        <button class="modal-btn" type="button">
+        <button class="modal-btn" type="button" data-modal-open>
           Замовити послугу
         </button>
       </div>
@@ -445,7 +445,17 @@
       </div>
       </div> 
     </footer>
+
+    <!-- modal btn -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="madal-close-icon" width="11" height="11">
+            <use href="./images/sprite.svg#icon-Vector"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
-
-
